# denki-yoho-for-slack

./: .gitignore  Dockerfile  README.md  app.py  data_downloader.py  lambda_handler.py  package.json  pyproject.toml  requirements.txt  serverless.yml
app-manifest/: socket-mode.yml
