[tool.poetry]
name = "denki-yoho-for-slack"
version = "0.1.0"
description = ""
authors = ["Kazuhiro Sera <seratch@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
slack-bolt = "^1.14.0"
requests = "^2.28.0"
black = "^22.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
